basic installable plugin

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,16 @@
+pluginGroup = dev.eca
+pluginName = eca-intellij
+pluginVersion = 0.0.1
+
+pluginSinceBuild = 233
+pluginVerifierIdeVersions = 2023.3, 2024.3
+
+platformType = IC
+platformVersion = 2023.3
+gradleVersion = 8.5
+
 kotlin.stdlib.default.dependency = false
-org.gradle.caching = true
-org.gradle.configuration-cache = true
+org.gradle.caching = false
+org.gradle.configuration-cache = false
 org.jetbrains.intellij.platform.downloadSources=true
 org.jetbrains.intellij.platform.useCacheRedirector=true
-platformType=IC
-platformVersion=2025.1
