--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -31,15 +31,11 @@
             secondary="true"
             factoryClass="dev.eca.eca_intellij.extension.tool_window.EcaToolWindowFactory" />
         <notificationGroup id="ECA notifications" displayType="BALLOON"/>
+        <editorFactoryListener implementation="dev.eca.eca_intellij.extension.cursor_editor_listener.CursorEditorFactoryListener"/>
     </extensions>
 
     <applicationListeners>
         <listener topic="com.intellij.ide.AppLifecycleListener"
                   class="com.github.ericdallo.clj4intellij.listener.ClojureClassLoaderListener"/>
     </applicationListeners>
-
-    <projectListeners>
-        <listener topic="com.intellij.openapi.editor.ex.FocusChangeListener"
-                  class="dev.eca.eca_intellij.listener.file.FileListener"/>
-    </projectListeners>
 </idea-plugin>
